--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,11 @@
-
-[build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
-
 [project]
-name = "modular"
-version = "0.0.1"
+name = "photon-platform-modulator"
+dynamic = ["version"]
+# version = "0.0.1"
 authors = [
   { name="phi ARCHITECT", email="github@phiarchitect.com" },
 ]
-description = "create and manage log entries for a python project"
+description = "create and manage modules and packages for a python project"
 readme = "README.rst"
 requires-python = ">=3.7"
 classifiers = [
@@ -24,8 +20,20 @@ dependencies = [
 ]
 
 [project.scripts]
-modular = "modular.app:run"
+modulator = "photon_platform.modulator.app:run"
 
-# [project.urls]
-# "Homepage" = "https://github.com//modular"
-# "Bug Tracker" = "https://github.com//modular/issues"
+[build-system]
+requires = ["setuptools", "setuptools-scm"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["photon_platform"]
+namespaces = true
+
+[tool.setuptools.dynamic]
+version = {attr = "photon_platform.modulator.__version__"}
+
+[project.urls]
+"Homepage" = "https://github.com/photon-platform/modulator"
+"Bug Tracker" = "https://github.com/photon-platform/modulator/issues"
